--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -13,22 +13,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    #- uses: actions/checkout@main
+    - uses: actions/checkout@master
     
     # Connect to Azure Container Registry (ACR)
-    - uses: azure/docker-login@v1
+    - name: Connecting to Azure Container Registry
+      uses: azure/docker-login@v1
       with:
         login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
-    
+    - name: Checkout code
+      uses: actions/checkout@master
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
+    - name: Cloning Dockerfile repo
+      run: git clone https://github.com/heber-crv/zammad-docker.git
+    #- name: Changing to repo directory
+      #run: cd zammad-docker
+
     # Container build and push to a Azure Container Registry (ACR)
-    - run: |
+    - name: Container build and push to a Azure Container Registry (ACR)
+      run: |
+        cd zammad-docker
         docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
     
     # Set the target Azure Kubernetes Service (AKS) cluster. 
-    - uses: azure/aks-set-context@v1
+    - name: Set the target Azure Kubernetes Service (AKS) cluster
+      uses: azure/aks-set-context@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: ${{ env.CLUSTER_NAME }}
@@ -39,7 +52,8 @@ jobs:
         #kubectl create namespace ${{ env.NAMESPACE }} --dry-run -o json | kubectl apply -f -
     
     # Create image pull secret for ACR
-    - uses: azure/k8s-create-secret@v1
+    - name: Create image pull secret for ACR
+      uses: azure/k8s-create-secret@v1
       with:
         container-registry-url: ${{ env.REGISTRY_NAME }}.azurecr.io
         container-registry-username: ${{ secrets.REGISTRY_USERNAME }}
