--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -62,14 +62,13 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         force: true
     
-    # Deploy app to AKS
-    #- uses: azure/k8s-deploy@v1
-      #with:
-        #manifests: |
-          #manifests/deployment.yml
-          #manifests/service.yml
-        #images: |
-          #${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-        #imagepullsecrets: |
-          #${{ env.SECRET }}
-        #namespace: ${{ env.NAMESPACE }}
+     Deploy app to AKS
+    - uses: azure/k8s-deploy@v1
+      with:
+        manifests: |
+          deployment.yml
+        images: |
+          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+        imagepullsecrets: |
+          ${{ env.SECRET }}
+        namespace: ${{ env.NAMESPACE }}
