added service file

--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -66,6 +66,7 @@ jobs:
       with:
         manifests: |
           deployment.yml
+          services.yml
         images: |
           ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         imagepullsecrets: |
