--- a/service.yml
+++ b/service.yml
@@ -5,8 +5,11 @@ metadata:
 spec:
   ports:
     - port: 80
+      targetPort: 80
     - port: 8080
+      targetPort: 8080
     - port: 5432
+      targetPort: 5432
   type: LoadBalancer
   selector:
-    app: zammad-deployment
+    app: zammad
