edited service file

--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -40,13 +40,13 @@ jobs:
 #        docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
     
     # Set the target Azure Kubernetes Service (AKS) cluster. 
-#    - name: Set the target Azure Kubernetes Service (AKS) cluster
-#      uses: azure/aks-set-context@v1
-#      with:
-#        creds: '${{ secrets.AZURE_CREDENTIALS }}'
-#        cluster-name: ${{ env.CLUSTER_NAME }}
-#        resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-    
+    - name: Set the target Azure Kubernetes Service (AKS) cluster
+      uses: azure/aks-set-context@v1
+      with:
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
+        cluster-name: ${{ env.CLUSTER_NAME }}
+        resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+   
     # Create namespace if doesn't exist
     #- run: |
         #kubectl create namespace ${{ env.NAMESPACE }} --dry-run -o json | kubectl apply -f -
