--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -17,27 +17,27 @@ jobs:
     - uses: actions/checkout@master
     
     # Connect to Azure Container Registry (ACR)
-#    - name: Connecting to Azure Container Registry
-#      uses: azure/docker-login@v1
-#      with:
-#        login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
-#        username: ${{ secrets.REGISTRY_USERNAME }} 
-#        password: ${{ secrets.REGISTRY_PASSWORD }}
-#    - name: Checkout code
-#      uses: actions/checkout@master
-#    - name: Fetch all history for all tags and branches
-#      run: git fetch --prune --unshallow
-#    - name: Cloning Dockerfile repo
-#      run: git clone https://github.com/heber-crv/zammad-docker.git
-    #- name: Changing to repo directory
-      #run: cd zammad-docker
+    - name: Connecting to Azure Container Registry
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
+        username: ${{ secrets.REGISTRY_USERNAME }} 
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+    - name: Checkout code
+      uses: actions/checkout@master
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
+    - name: Cloning Dockerfile repo
+      run: git clone https://github.com/heber-crv/zammad-docker.git
+#    - name: Changing to repo directory
+#      run: cd zammad-docker
 
     # Container build and push to a Azure Container Registry (ACR)
-#    - name: Container build and push to a Azure Container Registry (ACR)
-#      run: |
-#        cd zammad-docker
-#        docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-#        docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+    - name: Container build and push to a Azure Container Registry (ACR)
+      run: |
+        cd zammad-docker
+        docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+        docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
     
     # Set the target Azure Kubernetes Service (AKS) cluster. 
     - name: Set the target Azure Kubernetes Service (AKS) cluster
@@ -62,14 +62,15 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         force: true
     
-    - uses: azure/k8s-deploy@v1
+    - name: Deploying image to AKS cluster
+      uses: azure/k8s-deploy@v1
       with:
         manifests: |
           deployment.yml
           service.yml
         images: |
-          #${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:5243e2c2d8bff64781f7a559f5fa8c462b1f9cf9
+          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+          #${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:5243e2c2d8bff64781f7a559f5fa8c462b1f9cf9
         imagepullsecrets: |
           ${{ env.SECRET }}
         namespace: ${{ env.NAMESPACE }}
