--- a/deployment.yml
+++ b/deployment.yml
@@ -20,4 +20,10 @@ spec:
         image: zammad.azurecr.io/zammad:7ccc66d7e407f4108b2c7dc77f9659b1dddc911a
         ports:
         - containerPort: 80
-      restartPolicy: Never
+        startupProbe:
+          failureThreshold: 60
+          periodSeconds: 10
+          exec:
+            command:
+            - cat
+            - /etc/nginx/nginx.conf
