--- a/deployment.yml
+++ b/deployment.yml
@@ -21,9 +21,10 @@ spec:
         ports:
         - containerPort: 80
         startupProbe:
-          #failureThreshold: 60
-          #periodSeconds: 10
-          initialDelaySeconds: 150
+          #failureThreshold: 30
+          successThreshold: 180
+          periodSeconds: 10
+          #initialDelaySeconds: 150
           exec:
             command:
             - cat
