--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -61,12 +61,16 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         force: true
     
-    - name: Getting public IP from Azure resource and inserting it into service.yml
+    - name: Getting public IP from Azure resource
       uses: azure/CLI@v1
       with:
         inlineScript: |
           PUBLIC_IP=$(az network public-ip show -g $CLUSTER_RESOURCE_GROUP -n loadBalancer --query "ipAddress" -o tsv)
 
+    - name: Adding public IP to service.yml
+      run: |
+        chmod +x service.sh
+        ./service.sh
     - name: Deploying image to AKS cluster
       uses: azure/k8s-deploy@v1
       with:
