--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -65,7 +65,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az network public-ip show -g $CLUSTER_RESOURCE_GROUP -n loadBalancer --query "ipAddress" -o tsv >> $PUBLIC_IP
+          az network public-ip show -g $CLUSTER_RESOURCE_GROUP -n loadBalancer --query "ipAddress" -o tsv >> "$PUBLIC_IP"
 
     - name: Adding public IP to service.yml
       run: |
