--- a/service.yml
+++ b/service.yml
@@ -15,5 +15,6 @@ spec:
       port: 5432
       targetPort: 5432
   type: LoadBalancer
+  loadBalancerIP: 52.141.217.31
   selector:
     app: zammad
