--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,3 +1,5 @@
+name: cd
+
 on: push
 
 # Environment variables available to all jobs and steps in this workflow
@@ -6,9 +8,7 @@ env:
   CLUSTER_NAME: cluster1
   CLUSTER_RESOURCE_GROUP: heber-cervantes
   NAMESPACE: default
-  SECRET: zpswd
   APP_NAME: zammad
-  PUBLIC_IP: 
   
 jobs:
   build:
@@ -16,11 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-#    - name: Azure login
-#      uses: azure/login@v1
-#      with:
-#        creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
     # Connect to Azure Container Registry (ACR)
     - name: Connecting to Azure Container Registry
       uses: azure/docker-login@v1
@@ -28,10 +23,13 @@ jobs:
         login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
+
     - name: Checkout code
       uses: actions/checkout@master
+
     - name: Fetch all history for all tags and branches
       run: git fetch --prune --unshallow
+
     - name: Cloning Dockerfile repo
       run: git clone https://github.com/heber-crv/zammad-docker.git
 
@@ -57,21 +55,10 @@ jobs:
         container-registry-url: ${{ env.REGISTRY_NAME }}.azurecr.io
         container-registry-username: ${{ secrets.REGISTRY_USERNAME }}
         container-registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-        secret-name: ${{ env.SECRET }}
+        secret-name: ${{ secrets.PULL_SECRET }}
         namespace: ${{ env.NAMESPACE }}
         force: true
     
-#    - name: Getting public IP from Azure resource
-#      uses: azure/CLI@v1
-#      with:
-#        inlineScript: |
-#          az network public-ip show -g $CLUSTER_RESOURCE_GROUP -n loadBalancer --query "ipAddress" -o tsv >> "$PUBLIC_IP"
-
-#    - name: Adding public IP to service.yml
-#      run: |
-#        chmod +x service.sh
-#        ./service.sh
-
     - name: Deploying image to AKS cluster
       uses: azure/k8s-deploy@v1
       with:
@@ -81,5 +68,5 @@ jobs:
         images: |
           ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         imagepullsecrets: |
-          ${{ env.SECRET }}
+          ${{ secrets.PULL_SECRET }}
         namespace: ${{ env.NAMESPACE }}
